apps/jellyfin/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: jellyfin
      app.kubernetes.io/instance: jellyfin-1
      app.kubernetes.io/component: server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jellyfin
        app.kubernetes.io/instance: jellyfin-1
        app.kubernetes.io/component: server
    spec:
      nodeSelector: 
        node.kubernetes.io/type: gpu
      containers:
      - name: jellyfin
        image: jellyfin/jellyfin
        securityContext:
          # runAsUser: 1001
          # runAsGroup: 1001
          seccompProfile:
            type: Unconfined
        resources:
          requests:
            nvidia.com/gpu: "1"
            memory: "2Gi"
            cpu: "1"
          limits:
            nvidia.com/gpu: "1"
            # memory: "2Gi"
            # cpu: "2"
        ports:
          - containerPort: 8096
          - containerPort: 1900
          - containerPort: 7359
        volumeMounts:
          - name:  config
            mountPath:  /config
          - name: cache
            mountPath: /cache
          - name: media 
            mountPath: /media 
      volumes:
        - name: config 
          nfs:
            server: storage-pve-02.int.prossertech.com
            path: /data/rke/jellyfin/config
        - name: cache
          persistentVolumeClaim:
            claimName: jellyfin-cache-claim
        - name: media
          nfs:
            server: storage-pve-02.int.prossertech.com
            path: /data/media
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-svc
  namespace: jellyfin
spec:
  selector:
    app.kubernetes.io/name: jellyfin
    app.kubernetes.io/instance: jellyfin-1
    app.kubernetes.io/component: server
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8096
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-http
  labels:
    name: jellyfin-http
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Media Server
    gethomepage.dev/group: Media
    gethomepage.dev/name: Jellyfin
    gethomepage.dev/widget.type: "jellyfin"
    gethomepage.dev/widget.url: "http://jellyfin.home.prossertech.com"
    gethomepage.dev/pod-selector: ""
spec:
  ingressClassName: nginx
  rules:
  - host: jellyfin.home.prossertech.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: jellyfin-svc
            port: 
              number: 80
